add meta information Via ChatGPT - generate a square image to be used as a logo for my game about players connecting words to each other. It's typically played with 8 words, each one linked to the last.
- Please also create a site banner image with the appropriate dimensions.

- Please add 8 in front of words, i.e let the text in the logo say 8words

- Please do the same for the square version.

Via Copilot
- I've added banner and logo in the public folder of the client, I'd like to update the meta information so that its recognisable as "8Words" along with what the game is about. Please put in all important meta information.

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>8Words – Real-Time Word Guessing Game</title>
+    <meta
+      name="description"
+      content="8Words is a real-time, two-player word guessing game. Enter 8 connected words, take turns guessing, and race to reveal your opponent's sequence!"
+    />
+    <meta
+      name="keywords"
+      content="8Words, Connect8, word game, multiplayer, real-time, guessing, browser game, socket.io, vite, react"
+    />
+    <meta name="author" content="8Words Team" />
+    <meta property="og:title" content="8Words – Real-Time Word Guessing Game" />
+    <meta
+      property="og:description"
+      content="Enter 8 connected words, take turns guessing, and race to reveal your opponent's sequence! Play 8Words now."
+    />
+    <meta property="og:image" content="/banner.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://8words.etin.dev" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="8Words – Real-Time Word Guessing Game"
+    />
+    <meta
+      name="twitter:description"
+      content="Enter 8 connected words, take turns guessing, and race to reveal your opponent's sequence!"
+    />
+    <meta name="twitter:image" content="/banner.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
